fixed grid spacing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -506,7 +506,7 @@ h2 {
     margin: 100px auto;
   }
   .col {
-    margin: 16px 16px 8px 16px;
+    margin: 25px 25px 20px 25px;
   }
   img {
       border-radius: 10px;
